--- a/tutoring.html
+++ b/tutoring.html
@@ -34,7 +34,6 @@
     }
 
     header p {
-      font-family: 'Poppins', sans-serif;
       font-size: 1.1rem;
       margin-top: 0.5rem;
       color: #add8e6;
@@ -45,7 +44,7 @@
       background: #005fa3;
       display: flex;
       justify-content: center;
-      gap: 2rem;
+      gap: 2.5rem;
       padding: 1rem 0;
     }
 
@@ -54,9 +53,14 @@
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
+      color: #aee0ff;
       text-decoration: underline;
     }
 
@@ -95,10 +99,6 @@
       color: #005fa3;
       font-size: 1.5rem;
       margin-top: 0;
-    }
-
-    .details h2 i, .order-box h2 i {
-      color: #add8e6;
     }
 
     /* Tagline */
@@ -197,67 +197,51 @@
       text-decoration: underline;
     }
 
-    /* Back to Home */
-    .back-home {
-      text-align: center;
-      margin: 2rem 0;
-    }
-
-    .back-home button {
-      background: #005fa3;
-      color: white;
-      border: none;
-      padding: 0.8rem 1.5rem;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1rem;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
-      margin: 0 auto;
-      transition: all 0.3s ease;
-    }
-
-    .back-home button:hover {
-      background: #00487d;
-      transform: scale(1.05);
-    }
-
-    /* Floating WhatsApp Button (Mobile Only) */
-    .whatsapp-float {
+    /* Floating Buttons */
+    .floating-btn {
       position: fixed;
-      width: 60px;
-      height: 60px;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      color: white;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
       text-align: center;
-      font-size: 30px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      font-size: 26px;
+      color: white;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      cursor: pointer;
+      right: 20px;
       z-index: 1000;
       transition: all 0.3s ease;
     }
 
-    .whatsapp-float i {
+    .floating-btn i {
       margin-top: 15px;
     }
 
-    .whatsapp-float:hover {
-      transform: scale(1.1);
-      background-color: #1ebe5d;
+    .floating-btn:hover {
+      transform: scale(1.12);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.3);
     }
 
-    @media (min-width: 900px) {
-      .whatsapp-float {
-        display: none;
-      }
+    .email-float {
+      background-color: #005fa3;
+      bottom: 90px;
     }
 
-    /* Responsive */
+    .whatsapp-float {
+      background-color: #25D366;
+      bottom: 20px;
+    }
+
+    /* Footer */
+    footer {
+      background: #000;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: 2rem;
+    }
+
     @media (max-width: 700px) {
       nav a { font-size: 0.95rem; }
       section { padding: 1rem; }
@@ -272,8 +256,9 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="books.html">Books</a>
+    <a href="index.html"><i class="fas fa-home"></i> Home</a>
+    <a href="books.html"><i class="fas fa-book"></i> Books</a>
+    <a href="tutoring.html"><i class="fas fa-graduation-cap"></i> Tutoring</a>
   </nav>
 
   <section>
@@ -326,8 +311,12 @@
     <button onclick="window.location.href='index.html'"><i class="fas fa-home" style="color:white;"></i> Back to Home</button>
   </div>
 
-  <!-- WhatsApp Floating Button (Mobile Only) -->
-  <a href="https://wa.me/27672656319" class="whatsapp-float" target="_blank" title="Chat with us on WhatsApp">
+  <!-- Floating Contact Buttons -->
+  <a href="mailto:info@lithakoeduandsports.co.za" class="floating-btn email-float" title="Email Us">
+    <i class="fas fa-envelope"></i>
+  </a>
+
+  <a href="https://wa.me/27672656319" class="floating-btn whatsapp-float" title="Chat on WhatsApp" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
 
