--- a/tutoring.html
+++ b/tutoring.html
@@ -44,24 +44,24 @@
       background: #005fa3;
       display: flex;
       justify-content: center;
-      gap: 2.5rem;
+      gap: 2rem;
       padding: 1rem 0;
     }
 
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
       font-size: 1.1rem;
       display: flex;
       align-items: center;
-      gap: 0.5rem;
-      transition: color 0.3s ease;
+      gap: 0.4rem;
+      transition: color 0.3s ease, transform 0.3s ease;
     }
 
     nav a:hover {
       color: #aee0ff;
-      text-decoration: underline;
+      transform: scale(1.05);
     }
 
     /* Main Section */
@@ -197,39 +197,69 @@
       text-decoration: underline;
     }
 
+    /* Back to Home */
+    .back-home {
+      text-align: center;
+      margin: 3rem 0 2rem 0;
+    }
+
+    .back-home .cta-button {
+      background: #005fa3;
+      color: white;
+      border: none;
+      padding: 0.8rem 1.8rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.6rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, background 0.3s ease;
+    }
+
+    .back-home .cta-button:hover {
+      background: #00487d;
+      transform: scale(1.05);
+    }
+
     /* Floating Buttons */
-    .floating-btn {
+    .floating-buttons {
       position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      z-index: 1000;
+    }
+
+    .float-btn {
       width: 55px;
       height: 55px;
       border-radius: 50%;
-      text-align: center;
-      font-size: 26px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      cursor: pointer;
-      right: 20px;
-      z-index: 1000;
-      transition: all 0.3s ease;
+      font-size: 24px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .floating-btn i {
-      margin-top: 15px;
+    .float-btn:hover {
+      transform: scale(1.15);
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.3);
     }
 
-    .floating-btn:hover {
-      transform: scale(1.12);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.3);
-    }
-
-    .email-float {
+    .email-btn {
       background-color: #005fa3;
-      bottom: 90px;
     }
 
-    .whatsapp-float {
+    .whatsapp-btn {
       background-color: #25D366;
-      bottom: 20px;
     }
 
     /* Footer */
@@ -239,9 +269,11 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-      margin-top: 2rem;
+      margin-top: 3rem;
+      font-family: 'Poppins', sans-serif;
     }
 
+    /* Responsive */
     @media (max-width: 700px) {
       nav a { font-size: 0.95rem; }
       section { padding: 1rem; }
@@ -250,6 +282,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1>Lithako Edu Tutoring Service</h1>
     <p>“U decide – Onsite or Online”</p>
@@ -307,21 +340,25 @@
     </ul>
   </section>
 
+  <!-- Back to Home -->
   <div class="back-home">
-    <button onclick="window.location.href='index.html'"><i class="fas fa-home" style="color:white;"></i> Back to Home</button>
+    <button class="cta-button" onclick="window.location.href='index.html'">
+      <i class="fas fa-home" style="color:white;"></i> Back to Home
+    </button>
   </div>
 
-  <!-- Floating Contact Buttons -->
-  <a href="mailto:info@lithakoeduandsports.co.za" class="floating-btn email-float" title="Email Us">
-    <i class="fas fa-envelope"></i>
-  </a>
-
-  <a href="https://wa.me/27672656319" class="floating-btn whatsapp-float" title="Chat on WhatsApp" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  <!-- Floating Buttons -->
+  <div class="floating-buttons">
+    <a href="mailto:info@lithakoeduandsports.co.za" class="float-btn email-btn" title="Email Us">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://wa.me/27672656319" class="float-btn whatsapp-btn" title="Chat on WhatsApp" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
 
   <footer>
-    &copy; 2025 Lithako Edu. All rights reserved.
+    &copy; 2025 Lithako Edu & Sports. All rights reserved.
   </footer>
 </body>
 </html>
